--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,6 +22,6 @@ jobs:
         go-version: '1.20'
 
     - name: Build
-      run: cd src && go mod download && go build -v main.go
+      run: go mod download && go build -v main.go
     # - name: Test
     #   run: go test -v ./...
